# ThorStreamer

./: LICENSE  README.md  package-lock.json  package.json
docs/: README.md  SUMMARY.md  error-handling.md  limits-and-performance.md  overview.md  quick-start.md
docs/api-reference/: message-types.md  program-filters.md  services.md
docs/sdks/: go.md  rust.md  typescript.md
examples/golang/: client.go  config.json
examples/golang-advanced/: config.json  go.mod  go.sum
examples/golang-advanced/client/: client.go
examples/golang-advanced/cmd/: main.go
examples/golang-advanced/config/: config.go
examples/golang-advanced/filter/: filter.go
examples/golang-advanced/handlers/: handlers.go
examples/golang-advanced/logger/: logger.go
examples/golang-advanced/printer/: printer.go
examples/golang-advanced/proto/: events.pb.go  events_grpc.pb.go  publisher.pb.go  publisher_grpc.pb.go
examples/golang-advanced/types/: types.go
examples/golang-advanced/utils/: utils.go
examples/rust/: Cargo.toml  build.rs  config.json
examples/rust/proto/: events.proto  publisher.proto
examples/rust/src/: main.rs
examples/typescript/: build-proto.sh  client.ts  config.json  package-lock.json  package.json  publisher.ts  tsconfig.json
examples/typescript/google:proto/: empty.ts
examples/typescript/proto/: events.proto  index.ts  (+9 more)
proto/: events.proto  publisher.proto
protos/: events.ts
sdks/go/: README.md  go.mod
sdks/rust/: Cargo.toml  README.md  build.rs
sdks/rust/examples/: main.rs
sdks/rust/proto/: events.proto  publisher.proto
sdks/rust/src/: lib.rs
(+7 files in other folders)
