[package]
name = "thorStreamerExample"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
prost = "0.13.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5.1"
chrono = "0.4"
prost-types = "0.13.5"
http-body = "1.0.1"

[build-dependencies]
tonic-build = "0.12.3"