[package]
name = "thor-grpc-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust client for ThorStreamer gRPC streaming services"
repository = "https://github.com/thorlabsDev/ThorStreamer/sdks/rust"
keywords = ["grpc", "solana", "streaming", "blockchain"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
tonic = "0.12.3"
prost = "0.13.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5.1"
chrono = "0.4"
prost-types = "0.13.5"
http-body = "1.0.1"
tokio-stream = "0.1.17"

[build-dependencies]
tonic-build = "0.12.3"


[dev-dependencies]
env_logger = "0.11"
dotenv = "0.15"

[[example]]
name = "subscribe"
path = "examples/main.rs"